--- a/layouts/partials/conference.html
+++ b/layouts/partials/conference.html
@@ -1,6 +1,6 @@
-<div class="container" id="talk">
+<div class="container" id="conference">
+  {{ range $index, $element := sort .Site.Data.conferences "weight" }}
 
-  {{ range $index, $element := sort .Site.Data.talks "weight" }}
   <div class="row">
 
     <div class="col-md-12" id="blog-listing-medium">
