--- a/layouts/partials/shortcourse.html
+++ b/layouts/partials/shortcourse.html
@@ -1,5 +1,5 @@
-<div class="container" id="teaching">
-  {{ range $index, $element := sort .Site.Data.teaching "weight" }}
+<div class="container" id="shortcourse">
+  {{ range $index, $element := sort .Site.Data.shortcourses "weight" }}
 
   <div class="row">
 
@@ -28,22 +28,43 @@
             <h3>{{ $element.name }}</h3>
             {{ end }}
 
+            {{ if .subtitle }}
+            <h4 style="margin-top: -1em;">{{ $element.subtitle | markdownify }}</h4>
+            {{ end }}
+
             <ul class="fa-ul">
               {{ if .instructor }}
-              <li><i class="fa fa-li fa-user"></i> {{ $element.instructor }} </li>
+              <li><i class="fa fa-li fa-comment"></i> {{ $element.instructor }} </li>
               {{ end }}
 
               {{ if .instructors }}
-              <li><i class="fa fa-li fa-users"></i> {{ $element.instructors }} </li>
+              <li><i class="fa fa-li fa-comments"></i> {{ $element.instructors }} </li>
+              {{ end }}
+
+              {{ if .audience }}
+              <li><i class="fa fa-li fa-users"></i> {{ $element.audience }} </li>
+              {{ end }}
+
+              {{ if .institution }}
+              <li><i class="fa fa-li fa-university"></i> {{ $element.institution }} </li>
               {{ end }}
 
               {{ if .workload }}
-              <li><i class="fa fa-li fa-clock-o"></i> {{ $element.workload }}</li>
+              <li><i class="fa fa-li fa-clock-o"></i> {{ $element.workload }} </li>
               {{ end }}
 
-              {{ if .semester }}
-              <li><i class="fa fa-li fa-graduation-cap"></i> {{ $element.semester }}</li>
+              {{ if .date }}
+              <li><i class="fa fa-li fa-calendar-o"></i> {{ $element.date }}</li>
               {{ end }}
+
+              {{ if .place }}
+              <li><i class="fa fa-li fa-map-marker"></i> {{ $element.place }}</li>
+              {{ end }}
+
+              {{ if .homepage }}
+              <li><i class="fa fa-li fa-external-link"></i> {{ $element.homepage | markdownify }}</li>
+              {{ end }}
+
             </ul>
 
             <p class="intro">{{ $element.description | markdownify }}</p>
