--- a/layouts/partials/collaborator.html
+++ b/layouts/partials/collaborator.html
@@ -18,7 +18,7 @@ div.social .fa {
 
           <div class="col-md-4">
             <center>
-              <div class="image">
+              <div class="image collaborator">
 
                 {{ if .url }}
                 <a href="{{ .url }}" target="_blank">
