--- a/layouts/partials/conference.html
+++ b/layouts/partials/conference.html
@@ -35,23 +35,23 @@
 
             <ul class="fa-ul">
               {{ if .instructor }}
-              <li><i class="fa fa-li fa-comment"></i> {{ $element.instructor }} </li>
+              <li><i class="fa fa-li fa-comment"></i> {{ $element.instructor | markdownify }} </li>
               {{ end }}
 
               {{ if .instructors }}
-              <li><i class="fa fa-li fa-comments"></i> {{ $element.instructors }} </li>
+              <li><i class="fa fa-li fa-comments"></i> {{ $element.instructors | markdownify }} </li>
               {{ end }}
 
               {{ if .audience }}
-              <li><i class="fa fa-li fa-users"></i> {{ $element.audience }} </li>
+              <li><i class="fa fa-li fa-users"></i> {{ $element.audience | markdownify }} </li>
               {{ end }}
 
               {{ if .date }}
-              <li><i class="fa fa-li fa-calendar-o"></i> {{ $element.date }}</li>
+              <li><i class="fa fa-li fa-calendar-o"></i> {{ $element.date | markdownify }}</li>
               {{ end }}
 
               {{ if .place }}
-              <li><i class="fa fa-li fa-map-marker"></i> {{ $element.place }}</li>
+              <li><i class="fa fa-li fa-map-marker"></i> {{ $element.place | markdownify }}</li>
               {{ end }}
             </ul>
 
