Uses markdownfy in partial for videos.

--- a/layouts/partials/video.html
+++ b/layouts/partials/video.html
@@ -46,15 +46,15 @@
               {{ end }}
 
               {{ if .audience }}
-              <li><i class="fa fa-li fa-users"></i> {{ $element.audience }} </li>
+              <li><i class="fa fa-li fa-users"></i> {{ $element.audience | markdownify }} </li>
               {{ end }}
 
               {{ if .institution }}
-              <li><i class="fa fa-li fa-university"></i> {{ $element.institution }} </li>
+              <li><i class="fa fa-li fa-university"></i> {{ $element.institution | markdownify }} </li>
               {{ end }}
 
               {{ if .place }}
-              <li><i class="fa fa-li fa-map-marker"></i> {{ $element.place }}</li>
+              <li><i class="fa fa-li fa-map-marker"></i> {{ $element.place | markdownify }}</li>
               {{ end }}
 
               {{ if .date }}
