--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -8,7 +8,7 @@
       <div class="col-xs-7">
         <div class="social">
           {{ range .Site.Menus.topbar.ByWeight }}
-          <a href="{{ .URL }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
+          <a href="{{ .Permalink }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
           {{ end }}
         </div>
       </div>
