--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,9 +3,10 @@
 
         {{ if isset .Site.Params "about_us" }}
         <div class="col-md-4 col-sm-6">
-            <h4>{{ i18n "aboutUs" }}</h4>
+          <h4>{{ i18n "aboutUs" }}</h4>
 
-            {{ .Site.Params.about_us | markdownify }}
+          <!-- {{ .Site.Params.about_us | markdownify }} -->
+          {{ .Site.Params.about_us | safeHTML }}
 
             <hr class="hidden-md hidden-lg hidden-sm">
 
@@ -48,7 +49,8 @@
 
           <h4>{{ i18n "contactTitle" }}</h4>
 
-            {{ .Site.Params.address | markdownify }}
+          <!-- {{ .Site.Params.address | markdownify }} -->
+          {{ .Site.Params.address | safeHTML }}
 
           <!--
                <a href="/contact" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a>
